# bug-repro

./: .gitignore  BUILD.bazel  MODULE.bazel  flake.nix
src/: BUILD.bazel  go.mod  go.sum  main.go
