module(
    name = "repro"
)

bazel_dep(name = "gazelle", version = "0.40.0")
bazel_dep(name = "rules_go", version = "0.51.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//src:go.mod")

go_deps.gazelle_override(
    directives = [
      "gazelle:go_naming_convention import_alias",
    ],
    path = "github.com/google/go-jsonnet"
)

use_repo(
    go_deps,
    "com_github_google_go_jsonnet"
)

go_repository = use_repo_rule("@gazelle//:deps.bzl", "go_repository")
