load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "repro/src",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_go_jsonnet//:go-jsonnet"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
